Bug 1228755 - Map "C.UTF-8" to "en-US.UTF-8" in GetXPLocale().  r=smontagu